--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=plant-app
+spring.datasource.url=jdbc:mysql://192.168.1.106:3306/plant
+spring.datasource.username=plant
+spring.datasource.password=plant123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
