--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,24 @@
-spring.datasource.url=jdbc:mysql://192.168.1.106:3306/plant
+server.port=8081
+server.servlet.context-path= /plant-app
+api.timeout=40000
+
+spring.datasource.url=jdbc:mysql://10.244.217.226:3306/plant
 spring.datasource.username=plant
 spring.datasource.password=plant123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+#redis
+spring.redis.host=192.168.1.106
+spring.redis.port=6379
+spring.redis.password=hanh123
+spring.redis.timeout=1000
+
+
+
+upload.cloudinary.cloud-name:dhoyfs2wa
+upload.cloudinary.api-key:879153232285769
+upload.cloudinary.api-secret:W_Q8dvHmN9lhlFoL7IPFV2xtC2M
+
+
