--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 server.servlet.context-path= /plant-app
 api.timeout=40000
 
@@ -17,8 +17,8 @@ spring.redis.timeout=1000
 
 
 
-upload.cloudinary.cloud-name:dhoyfs2wa
-upload.cloudinary.api-key:879153232285769
-upload.cloudinary.api-secret:W_Q8dvHmN9lhlFoL7IPFV2xtC2M
+upload.cloudinary.cloud-name=dhoyfs2wa
+upload.cloudinary.api-key=879153232285769
+upload.cloudinary.api-secret=W_Q8dvHmN9lhlFoL7IPFV2xtC2M
 
 
