--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 server.servlet.context-path= /plant-app
 api.timeout=40000
 
-spring.datasource.url=jdbc:mysql://10.244.217.226:3306/plant
-spring.datasource.username=plant
-spring.datasource.password=plant123
+spring.datasource.url=jdbc:mysql://localhost:3306/plant-app
+spring.datasource.username=root
+spring.datasource.password=root121120
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
