--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
+
 #redis
-spring.redis.host=192.168.1.106
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password=hanh123
+spring.redis.password=hanh121120
 spring.redis.timeout=1000
 
 
